--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/dimension"]
-	path = themes/dimension
-	url = https://gitlab.com/dspechnikov/dimension-hugo
+[submodule "themes/zozo"]
+	path = themes/zozo
+	url = https://github.com/varkai/hugo-theme-zozo
