--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 publish = "public"
-command = "hugo --gc --minify --theme=dimension --buildDrafts --gc --minify"
+command = "hugo --theme=zozo"
 
 [context.production.environment]
 HUGO_VERSION = "0.74.2"
